--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,25 @@ html{
     font-size: 62.5%;
     /* overflow-x: hidden;  */
 }
+html{
+    font-size: 62.5%;
+    /* overflow-x: hidden;  */
+}
+
+html::-webkit-scrollbar {
+    width: 1em;
+}
+
+html::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 .6rem rgba(255, 0, 0, 0.07);
+    padding-left: .5rem;
+}
+
+html::-webkit-scrollbar-thumb {
+    background-color: rgb(0, 234, 255);
+    outline: .1rem solid slategrey;
+}
+
 
 p{
     font-size: 1.6rem;
